cmss/main/default/objects/Commission__c/fields/AccountGlobalId__c.field-meta.xml
<CustomField>
    <fullName>AccountGlobalId__c</fullName>
    <formula>Account__r.GlobalId__c</formula>
    <label>Account Global Id</label>
    <type>Text</type>
</CustomField>