cmss/main/default/objects/Commission__c/fields/AccountKeySerialNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountKeySerialNumber__c</fullName>
    <label>Account Key Serial Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>