cmss/main/default/objects/Commission__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AssetName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>