cmss/main/default/objects/Commission__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Author</label>
    <length>8</length>
    <type>Text</type>
</CustomField>