cmss/main/default/objects/Commission__c/fields/BaseAssetName__c.field-meta.xml
<CustomField>
    <fullName>BaseAssetName__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Base Asset Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>