cmss/main/default/objects/Commission__c/fields/BillingDate__c.field-meta.xml
<CustomField>
    <fullName>BillingDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BillingDate</label>
    <type>Date</type>
</CustomField>