cmss/main/default/objects/Commission__c/fields/BusinessCase__c.field-meta.xml
<CustomField>
    <fullName>BusinessCase__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Case</label>
    <length>4</length>
    <type>Text</type>
</CustomField>