cmss/main/default/objects/Commission__c/fields/BusinessCaseDescription__c.field-meta.xml
<CustomField>
    <fullName>BusinessCaseDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BusinessCaseDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>