cmss/main/default/objects/Commission__c/fields/ChangeIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ChangeIdentifier__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Change Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>