cmss/main/default/objects/Commission__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>