cmss/main/default/objects/Commission__c/fields/ClosingAgentCommissionAcountBase__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgentCommissionAcountBase__c</fullName>
    <label>Closing Agent Commission Acount Base</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>