cmss/main/default/objects/Commission__c/fields/ClosingFee__c.field-meta.xml
<CustomField>
    <fullName>ClosingFee__c</fullName>
    <label>ClosingFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>