cmss/main/default/objects/Commission__c/fields/ClosingSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>ClosingSerialNumber__c</fullName>
    <label>ClosingSerialNumber</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>