cmss/main/default/objects/Commission__c/fields/ClosureType__c.field-meta.xml
<CustomField>
    <fullName>ClosureType__c</fullName>
    <label>Closure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>