cmss/main/default/objects/Commission__c/fields/CommissionBasis__c.field-meta.xml
<CustomField>
    <fullName>CommissionBasis__c</fullName>
    <label>CommissionBasis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>