cmss/main/default/objects/Commission__c/fields/CommissionRate__c.field-meta.xml
<CustomField>
    <fullName>CommissionRate__c</fullName>
    <label>CommissionRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>