cmss/main/default/objects/Commission__c/fields/CPUSuffix__c.field-meta.xml
<CustomField>
    <fullName>CPUSuffix__c</fullName>
    <label>CPUSuffix</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>