cmss/main/default/objects/Commission__c/fields/DateOfAcquisition__c.field-meta.xml
<CustomField>
    <fullName>DateOfAcquisition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Acquisition</label>
    <type>Date</type>
</CustomField>