cmss/main/default/objects/Commission__c/fields/DateOfPayment__c.field-meta.xml
<CustomField>
    <fullName>DateOfPayment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>