cmss/main/default/objects/Commission__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocumentDate</label>
    <type>Date</type>
</CustomField>