cmss/main/default/objects/Commission__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>