cmss/main/default/objects/Commission__c/fields/EntitlementAmount__c.field-meta.xml
<CustomField>
    <fullName>EntitlementAmount__c</fullName>
    <label>EntitlementAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>