cmss/main/default/objects/Commission__c/fields/ExpenditureFlatRate__c.field-meta.xml
<CustomField>
    <fullName>ExpenditureFlatRate__c</fullName>
    <label>Expenditure Flat Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>