cmss/main/default/objects/Commission__c/fields/ExpenditureFlatRateCategory__c.field-meta.xml
<CustomField>
    <fullName>ExpenditureFlatRateCategory__c</fullName>
    <description>Field for grouping of Expenditure Flat Rate report (Výdajový paušál)</description>
    <formula>IF( ProductGroup__c == 15 || ProductGroup__c == 16, BusinessCaseDescription__c, TEXT(ProductGroup__c) )</formula>
    <label>ExpenditureFlatRateCategory</label>
    <type>Text</type>
</CustomField>