cmss/main/default/objects/Commission__c/fields/FenixDocsLink__c.field-meta.xml
<CustomField>
    <fullName>FenixDocsLink__c</fullName>
    <formula>$Setup.Configurations__c.CommissionFenixDocsLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FenixDocsLink</label>
    <type>Text</type>
</CustomField>