cmss/main/default/objects/Commission__c/fields/FreeText__c.field-meta.xml
<CustomField>
    <fullName>FreeText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FreeText</label>
    <length>50</length>
    <type>Text</type>
</CustomField>