cmss/main/default/objects/Commission__c/fields/FundIdentification__c.field-meta.xml
<CustomField>
    <fullName>FundIdentification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FundIdentification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>