cmss/main/default/objects/Commission__c/fields/IsNotIncludedExpenditureFlatRate__c.field-meta.xml
<CustomField>
    <fullName>IsNotIncludedExpenditureFlatRate__c</fullName>
    <formula>AND(
ISPICKVAL(StatementType__c, &quot;190&quot;),
EntitlementAmount__c = 0,
PendingAmount__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Not Included Expenditure Flat Rate</label>
    <type>Checkbox</type>
</CustomField>