cmss/main/default/objects/Commission__c/fields/Modulo10Indicator__c.field-meta.xml
<CustomField>
    <fullName>Modulo10Indicator__c</fullName>
    <label>Modulo 10 Indicator</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>