cmss/main/default/objects/Commission__c/fields/Modulo11Indicator__c.field-meta.xml
<CustomField>
    <fullName>Modulo11Indicator__c</fullName>
    <label>Modulo 11 Indicator</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>