cmss/main/default/objects/Commission__c/fields/OwnerCommissionAcountBase__c.field-meta.xml
<CustomField>
    <fullName>OwnerCommissionAcountBase__c</fullName>
    <label>OwnerCommissionAcountBase</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>