cmss/main/default/objects/Commission__c/fields/PendingAmount__c.field-meta.xml
<CustomField>
    <fullName>PendingAmount__c</fullName>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>