cmss/main/default/objects/Commission__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>ProductGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>51</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>69</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>91</fullName>
            </value>
            <value>
                <fullName>93</fullName>
            </value>
            <value>
                <fullName>94</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>