cmss/main/default/objects/Commission__c/fields/RecordNumber__c.field-meta.xml
<CustomField>
    <fullName>RecordNumber__c</fullName>
    <label>RecordNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>