cmss/main/default/objects/Commission__c/fields/StatementType__c.field-meta.xml
<CustomField>
    <fullName>StatementType__c</fullName>
    <label>Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>190</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>998</fullName>
            </value>
            <value>
                <fullName>999</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>