cmss/main/default/objects/Commission__c/fields/TargetAmount__c.field-meta.xml
<CustomField>
    <fullName>TargetAmount__c</fullName>
    <label>Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>