cmss/main/default/objects/Commission__c/recordTypes/RT10.recordType-meta.xml
<RecordType>
    <fullName>RT10</fullName>
    <active>true</active>
    <description>Nezaplacené smlouvy o stavebním spoření – pořízené do konce měsíce</description>
    <label>10</label>
</RecordType>