cmss/main/default/objects/Commission__c/recordTypes/RT100.recordType-meta.xml
<RecordType>
    <fullName>RT100</fullName>
    <active>true</active>
    <label>100</label>
</RecordType>