cmss/main/default/objects/Commission__c/recordTypes/RT110.recordType-meta.xml
<RecordType>
    <fullName>RT110</fullName>
    <active>true</active>
    <description>Rizikové životní pojištění</description>
    <label>110</label>
</RecordType>