cmss/main/default/objects/Commission__c/recordTypes/RT120.recordType-meta.xml
<RecordType>
    <fullName>RT120</fullName>
    <active>true</active>
    <description>ČSOB + Poštovní spořitelna</description>
    <label>120</label>
</RecordType>