cmss/main/default/objects/Commission__c/recordTypes/RT130.recordType-meta.xml
<RecordType>
    <fullName>RT130</fullName>
    <active>true</active>
    <description>Sberbank</description>
    <label>130</label>
</RecordType>