cmss/main/default/objects/Commission__c/recordTypes/RT140.recordType-meta.xml
<RecordType>
    <fullName>RT140</fullName>
    <active>true</active>
    <description>Hypotéka od Lišky</description>
    <label>140</label>
</RecordType>