cmss/main/default/objects/Commission__c/recordTypes/RT150.recordType-meta.xml
<RecordType>
    <fullName>RT150</fullName>
    <active>true</active>
    <description>Životní pojištění</description>
    <label>150</label>
</RecordType>