cmss/main/default/objects/Commission__c/recordTypes/RT160.recordType-meta.xml
<RecordType>
    <fullName>RT160</fullName>
    <active>true</active>
    <description>Pojištění majetku a odpovědnosti</description>
    <label>160</label>
</RecordType>