cmss/main/default/objects/Commission__c/recordTypes/RT170.recordType-meta.xml
<RecordType>
    <fullName>RT170</fullName>
    <active>true</active>
    <description>Jednorázové obraty zúčtovatelné s minimem/maximem</description>
    <label>170</label>
</RecordType>