cmss/main/default/objects/Commission__c/recordTypes/RT180.recordType-meta.xml
<RecordType>
    <fullName>RT180</fullName>
    <active>true</active>
    <description>Jednorázové obraty nezúčtovatelné s minimem/maximem</description>
    <label>180</label>
</RecordType>