cmss/main/default/objects/Commission__c/recordTypes/RT190.recordType-meta.xml
<RecordType>
    <fullName>RT190</fullName>
    <active>true</active>
    <description>Kauční konto (tvorba a čerpání)</description>
    <label>190</label>
</RecordType>