cmss/main/default/objects/Commission__c/recordTypes/RT20.recordType-meta.xml
<RecordType>
    <fullName>RT20</fullName>
    <active>true</active>
    <label>20</label>
</RecordType>