cmss/main/default/objects/Commission__c/recordTypes/RT200.recordType-meta.xml
<RecordType>
    <fullName>RT200</fullName>
    <active>true</active>
    <description>Ostatní</description>
    <label>200</label>
</RecordType>