cmss/main/default/objects/Commission__c/recordTypes/RT30.recordType-meta.xml
<RecordType>
    <fullName>RT30</fullName>
    <active>true</active>
    <description>Zaplacené smlouvy o stavebním spoření</description>
    <label>30</label>
</RecordType>