cmss/main/default/objects/Commission__c/recordTypes/RT40.recordType-meta.xml
<RecordType>
    <fullName>RT40</fullName>
    <active>true</active>
    <label>40</label>
</RecordType>