cmss/main/default/objects/Commission__c/recordTypes/RT50.recordType-meta.xml
<RecordType>
    <fullName>RT50</fullName>
    <active>true</active>
    <description>Bonusový vklad od Lišky - smlouvy s nárokem na provize</description>
    <label>50</label>
</RecordType>