cmss/main/default/objects/Commission__c/recordTypes/RT60.recordType-meta.xml
<RecordType>
    <fullName>RT60</fullName>
    <active>true</active>
    <description>Informativní list – smlouvy - akce &quot;bez poplatku&quot;</description>
    <label>60</label>
</RecordType>