cmss/main/default/objects/Commission__c/recordTypes/RT70.recordType-meta.xml
<RecordType>
    <fullName>RT70</fullName>
    <active>true</active>
    <description>Informativní list – Bonusový vklad, kde dosud nevznikl nárok na výplatu provize</description>
    <label>70</label>
</RecordType>