cmss/main/default/objects/Commission__c/recordTypes/RT80.recordType-meta.xml
<RecordType>
    <fullName>RT80</fullName>
    <active>true</active>
    <description>Úvěry / meziúvěry</description>
    <label>80</label>
</RecordType>