cmss/main/default/objects/Commission__c/recordTypes/RT90.recordType-meta.xml
<RecordType>
    <fullName>RT90</fullName>
    <active>true</active>
    <label>90</label>
</RecordType>