cmss/main/default/objects/Commission__c/recordTypes/RT998.recordType-meta.xml
<RecordType>
    <fullName>RT998</fullName>
    <active>true</active>
    <description>Výplata</description>
    <label>998</label>
</RecordType>