cmss/main/default/objects/Commission__c/recordTypes/RT999.recordType-meta.xml
<RecordType>
    <fullName>RT999</fullName>
    <active>true</active>
    <description>Součtová strana</description>
    <label>999</label>
</RecordType>