cmss/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BillingDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny provize</label>
</ListView>